# msg-bebop

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  LICENSE  PUBLISHING.md  README.md  STATUS.md  bebop.json  build.sh  cclsp.json  go.work  make.sh
.cargo/: config.toml
.github/scripts/: update_coverage_table.sh
.github/workflows/: interop.yaml  publish.yml  test.yaml
conformance/e2e/: run_topology.sh  test_all_topologies.sh  test_go_ts_rust.sh  test_negative_cases.sh  test_relay_faults.sh  test_retry_recovery.sh
conformance/fixtures/: suite.v1.json  trx_suite.v1.json
coverage/: merged.info
coverage/go-coverage/: coverage.out
coverage/html/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage/html/rust/src/: context.rs.func-c.html  context.rs.func.html  index.html  (+18 more)
coverage/normalized/: go.lcov  ts.lcov
coverage/rust-coverage/: lcov.info
coverage/ts-coverage/: lcov.info
cpp/: CMakeLists.txt
cpp/examples/: basic_usage.cpp
cpp/include/msg/: bebop.hpp  msg.hpp
csharp/: msg.csproj
csharp/src/: Msg.cs
csharp/tests/: MsgTests.cs
doc/: ARCH.md  CONCERNS.md  TODO.md  testing.MD
docs/go/: index.html
docs/rust/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/rust/courier/: all.html  fn.add.html  index.html  sidebar-items.js
docs/ts/: hierarchy.html  index.html
docs/ts/assets/: navigation.js  search.js
docs/ts/functions/: cmd_main.main.html  internal_main.greet.html  pkg_math.add.html
docs/ts/modules/: cmd_main.html  internal_main.html  pkg_math.html  pkg_math.test.html  pkg_utils.html
go/: go.mod  go.sum  msg.go  msg_test.go  utils.go
golang/src/: go.mod
golang/src/cmd/: main.go
golang/src/pkg/: add.go  add_test.go
golang/tests/: conformance_test.go  go.mod  math_test.go
python/: __init__.py  setup.py  test_msg.py
python/msg/: msg.py
rust/: .gitignore  Cargo.toml
rust/examples/: basic_usage.rs
rust/src/: context.rs  context_tests.rs  courier.rs  db.rs  db_sled.rs  db_sled_tests.rs  error.rs  expiration.rs  idempotency.rs  lib.rs  lib_tests.rs  msg.rs  observability.rs  pact.rs  receipt.rs  reliable.rs  reliable_tests.rs  trx_tests.rs  tx_sync.rs  txrx.rs
rust/src/pkg/: add.rs  lib.rs
rust/tests/: conformance_fixture_tests.rs  courier_tests.rs  math_suite_tests.rs  trx_conformance_fixture_tests.rs
schema/: msg.bop
typescript/: jest.config.ts  package-lock.json  package.json  tsconfig.debug.json  tsconfig.json  tsconfig.release.json
typescript/src/: index.ts  msg.ts
typescript/src/cmd/: interop.ts  main.ts
typescript/src/internal/: main.ts
typescript/src/pkg/: conformance.ts  math.test.ts  trx.test.ts  trx.ts  trx_fixture.test.ts
typescript/test/: msg.test.ts
typescript/tests/: conformance.test.ts  main.test.ts
(+91 files in other folders)
