[package]
name = "trx"
version = "0.1.0"
edition = "2021"

[lib]
name = "trx"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
dashmap = "5.0"
futures = "0.3.31"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
lazy_static = "1.4.0"
log = "0.4.20"
sled = "0.34"
env_logger = "0.11.8"
fs2 = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
